# sports-equipment-architecture-project

./: README.md  T1_软件需求分析.md  T2_需求用例与质量属性场景分析.md  T3_架构设计决策.md  T4_ATAM架构评估.md  T6_系统测试报告.md  功能效果展示.md
backend/: CMakeLists.txt
backend/cmake/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sports_equipment_backend.slnx  sports_equipment_backend.vcxproj  sports_equipment_backend.vcxproj.filters
backend/config/: database.conf
backend/src/app/: AppComponent.hpp  main.cpp
backend/src/controller/: AuthController.hpp  BorrowRecordController.hpp  EquipmentCategoryController.hpp  EquipmentController.hpp  HealthController.hpp  ReservationController.hpp
backend/src/dao/: BorrowRecordDAO.cpp  BorrowRecordDAO.hpp  DatabaseConfig.hpp  EquipmentCategoryDAO.cpp  EquipmentCategoryDAO.hpp  EquipmentDAO.cpp  EquipmentDAO.hpp  ReservationDAO.cpp  ReservationDAO.hpp  UserDAO.cpp  UserDAO.hpp
backend/src/dto/request/: CancelReservationRequestDto.hpp  CreateBorrowRequestDto.hpp  CreateReservationRequestDto.hpp  (+3 more)
backend/src/model/: BorrowRecord.hpp  BorrowRecordPageResult.hpp  BorrowRecordView.hpp  Equipment.hpp  EquipmentCategory.hpp  EquipmentPageResult.hpp  Reservation.hpp  ReservationPageResult.hpp  ReservationView.hpp  User.hpp
backend/src/service/: BorrowRecordService.cpp  BorrowRecordService.hpp  EquipmentCategoryService.cpp  EquipmentCategoryService.hpp  EquipmentService.cpp  EquipmentService.hpp  ReservationService.cpp  ReservationService.hpp  UserService.cpp  UserService.hpp
(+62 files in other folders)
